move remove-rule button to inline fix input width align about section, change display for mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,7 +53,7 @@
     width: 97%;
     margin:auto;
   }
-  input .input {
+  .input {
     width: 70%;
   }
   .nes-logo {
