--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,17 @@
   padding: 10px;
 }
 
+@media only screen and (max-width: 667px) {
+  #made-by, #github-links {
+    width: 100%;
+    margin: auto;
+    display: block;
+  }
+}
+
+#github-links p {
+  text-align: center;
+}
 .github-link {
   display: flex;
   height: 100px;
